<resources>
    <string name="app_name">UAS 180030559 1</string>

    <string name="tambah">Tambah Film</string>
    <string name="edit">Edit Film</string>
    <string name="hapus">Hapus Film</string>
    <string name="titik_dua">:</string>
    <string name="simpan">Simpan</string>
    <string name="id_film">ID Film</string>
    <string name="judul_film">Judul</string>
    <string name="tgl_rilis">Release Date</string>
    <string name="genre">Genre</string>
    <string name="durasi">Duration</string>
    <string name="rating">Rating</string>
    <string name="synopsis">Synopsis</string>
    <string name="cover">Cover Film</string>
    <string name="data_film">Data Film</string>
</resources>
